chore: add biome

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,28 +4,103 @@
 		"node": true,
 		"es6": true
 	},
-	"plugins": ["prettier", "promise"],
-	"extends": ["eslint:recommended", "plugin:prettier/recommended", "plugin:promise/recommended"],
+	"plugins": ["promise"],
+	"extends": ["eslint:recommended", "plugin:promise/recommended"],
 	"rules": {
-		// for prettier compat
-		"implicit-arrow-linebreak": "off",
-
-		"no-console": "error",
-		"no-debugger": "error",
-		"curly": ["error", "all"],
-		"no-eval": ["error", {}],
-		"no-multiple-empty-lines": ["error", { "max": 1, "maxBOF": 0 }],
 		"no-var": "error",
-		"no-dupe-keys": "error",
-		"no-prototype-builtins": "error",
-		"prefer-arrow-callback": "error",
-		"eol-last": ["error", "always"],
-		"eqeqeq": ["error", "always"],
-		"no-unused-vars": "error",
-
 		"@typescript-eslint/no-var-requires": "warn",
+		"promise/prefer-await-to-then": "error",
+		"no-mixed-spaces-and-tabs": "off",
 
-		"promise/prefer-await-to-then": "error"
+		// disabled because biome
+		"array-callback-return": "off",
+		"constructor-super": "off",
+		"default-case-last": "off",
+		"dot-notation": "off",
+		"eqeqeq": "off",
+		"for-direction": "off",
+		"getter-return": "off",
+		"no-array-constructor": "off",
+		"no-async-promise-executor": "off",
+		"no-case-declarations": "off",
+		"no-class-assign": "off",
+		"no-compare-neg-zero": "off",
+		"no-cond-assign": "off",
+		"no-const-assign": "off",
+		"no-constant-condition": "off",
+		"no-constructor-return": "off",
+		"no-control-regex": "off",
+		"no-debugger": "off",
+		"no-delete-var": "off",
+		"no-dupe-args": "off",
+		"no-dupe-class-members": "off",
+		"no-dupe-else-if": "off",
+		"no-dupe-keys": "off",
+		"no-duplicate-case": "off",
+		"no-empty": "off",
+		"no-empty-character-class": "off",
+		"no-empty-pattern": "off",
+		"no-eval": "off",
+		"no-ex-assign": "off",
+		"no-extra-boolean-cast": "off",
+		"no-extra-label": "off",
+		"no-fallthrough": "off",
+		"no-func-assign": "off",
+		"no-global-assign": "off",
+		"no-import-assign": "off",
+		"no-inner-declarations": "off",
+		"no-irregular-whitespace": "off",
+		"no-label-var": "off",
+		"no-labels": "off",
+		"no-lone-blocks": "off",
+		"no-loss-of-precision": "off",
+		"no-misleading-character-class": "off",
+		"no-new-native-nonconstructor": "off",
+		"no-new-symbol": "off",
+		"no-nonoctal-decimal-escape": "off",
+		"no-obj-calls": "off",
+		"no-octal-escape": "off",
+		"no-prototype-builtins": "off",
+		"no-redeclare": "off",
+		"no-regex-spaces": "off",
+		"no-return-assign": "off",
+		"no-self-assign": "off",
+		"no-self-compare": "off",
+		"no-sequences": "off",
+		"no-setter-return": "off",
+		"no-shadow-restricted-names": "off",
+		"no-sparse-arrays": "off",
+		"no-template-curly-in-string": "off",
+		"no-this-before-super": "off",
+		"no-undef-init": "off",
+		"no-unneeded-ternary": "off",
+		"no-unreachable": "off",
+		"no-unsafe-finally": "off",
+		"no-unsafe-negation": "off",
+		"no-unsafe-optional-chaining": "off",
+		"no-unused-labels": "off",
+		"no-unused-private-class-members": "off",
+		"no-unused-vars": "off",
+		"no-use-before-define": "off",
+		"no-useless-backreference": "off",
+		"no-useless-catch": "off",
+		"no-useless-computed-key": "off",
+		"no-useless-constructor": "off",
+		"no-useless-escape": "off",
+		"no-useless-rename": "off",
+		"no-with": "off",
+		"prefer-arrow-callback": "off",
+		"prefer-const": "off",
+		"prefer-exponentiation-operator": "off",
+		"prefer-numeric-literals": "off",
+		"prefer-object-has-own": "off",
+		"prefer-regex-literals": "off",
+		"prefer-rest-params": "off",
+		"prefer-template": "off",
+		"radix": "off",
+		"require-yield": "off",
+		"use-isnan": "off",
+		"valid-typeof": "off"
 	},
 	"parserOptions": {
 		"ecmaVersion": 2020,
@@ -70,12 +145,8 @@
 			},
 			"rules": {
 				"no-unused-vars": "off",
-				"@typescript-eslint/adjacent-overload-signatures": "error",
-				"@typescript-eslint/switch-exhaustiveness-check": "error",
-				"@typescript-eslint/restrict-template-expressions": "warn",
 				"@typescript-eslint/no-unnecessary-type-assertion": "warn",
 				"@typescript-eslint/no-unnecessary-boolean-literal-compare": "warn",
-
 				"@typescript-eslint/no-unsafe-call": "off", // TODO: switch to warn
 				"@typescript-eslint/no-unsafe-member-access": "off", // TODO: switch to warn
 				"@typescript-eslint/no-unsafe-assignment": "off" // TODO: switch to warn
