--- a/packages/ott-vis-datasource/package.json
+++ b/packages/ott-vis-datasource/package.json
@@ -13,8 +13,8 @@
 		"test": "jest --passWithNoTests --maxWorkers 4 --coverage",
 		"test:ci": "jest --passWithNoTests --maxWorkers 4",
 		"typecheck": "tsc --noEmit",
-		"lint": "prettier --write --config ../../.prettierrc . && tsc --noEmit && eslint --cache --ignore-path ./.gitignore --ext .js,.jsx,.ts,.tsx . --fix",
-		"lint-ci": "prettier --check --config ../../.prettierrc . && tsc --noEmit && eslint --cache --ignore-path ./.gitignore --ext .js,.jsx,.ts,.tsx .",
+		"lint": "tsc --noEmit && eslint --cache --ignore-path ./.gitignore --ext .js,.jsx,.ts,.tsx . --fix",
+		"lint-ci": "tsc --noEmit && eslint --cache --ignore-path ./.gitignore --ext .js,.jsx,.ts,.tsx .",
 		"e2e": "npm exec cypress install && npm exec grafana-e2e run",
 		"e2e:open": "npm exec cypress install && npm exec grafana-e2e open",
 		"e2e:update": "npm exec cypress install && npm exec grafana-e2e run --update-screenshots",
