--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -5,23 +5,11 @@
 		"es6": true,
 		"browser": true
 	},
-	"plugins": ["prettier", "vitest"],
-	"extends": ["eslint:recommended", "plugin:prettier/recommended"],
+	"plugins": ["vitest"],
+	"extends": ["eslint:recommended"],
 	"rules": {
-		"no-console": "error",
-		"no-debugger": "error",
-		"curly": ["error", "all"],
-		"camelcase": "error",
-		"no-eval": ["error", {}],
-		"no-multiple-empty-lines": ["error", { "max": 1, "maxBOF": 0 }],
 		"no-var": "error",
-		"no-dupe-keys": "error",
 		"no-prototype-builtins": "error",
-		"prefer-arrow-callback": "error",
-		"eol-last": ["error", "always"],
-		"eqeqeq": ["error", "always"],
-		"no-unused-vars": "error",
-
 		"@typescript-eslint/no-var-requires": "warn"
 	},
 	"parserOptions": {
@@ -67,12 +55,9 @@
 			},
 			"rules": {
 				"no-unused-vars": "off",
-				"@typescript-eslint/adjacent-overload-signatures": "error",
 				"@typescript-eslint/switch-exhaustiveness-check": "error",
-				"@typescript-eslint/restrict-template-expressions": "warn",
 				"@typescript-eslint/no-unnecessary-type-assertion": "warn",
 				"@typescript-eslint/no-unnecessary-boolean-literal-compare": "warn",
-
 				"@typescript-eslint/no-unsafe-call": "off", // TODO: switch to warn
 				"@typescript-eslint/no-unsafe-member-access": "off", // TODO: switch to warn
 				"@typescript-eslint/no-unsafe-assignment": "off" // TODO: switch to warn
