--- a/packages/ott-vis-panel/package.json
+++ b/packages/ott-vis-panel/package.json
@@ -12,8 +12,8 @@
 		"dev": "webpack -w -c ./.config/webpack/webpack.config.ts --env development",
 		"test": "jest --passWithNoTests --maxWorkers 4 --coverage",
 		"typecheck": "tsc --noEmit",
-		"lint": "prettier --write --config ../../.prettierrc . && tsc --noEmit && eslint --cache --ignore-path ./.gitignore --ext .js,.jsx,.ts,.tsx . --fix",
-		"lint-ci": "prettier --check --config ../../.prettierrc . && tsc --noEmit && eslint --cache --ignore-path ./.gitignore --ext .js,.jsx,.ts,.tsx .",
+		"lint": "tsc --noEmit && eslint --cache --ignore-path ./.gitignore --ext .js,.jsx,.ts,.tsx . --fix",
+		"lint-ci": "tsc --noEmit && eslint --cache --ignore-path ./.gitignore --ext .js,.jsx,.ts,.tsx .",
 		"e2e": "npm exec cypress install && npm exec grafana-e2e run",
 		"e2e:update": "npm exec cypress install && npm exec grafana-e2e run --update-screenshots",
 		"server": "docker-compose up --build",
